# driplink-app

./: .env  .env.example  ASSIGNMENT_COMPLETION.md  README.md  pyproject.toml  test_complete_api.py
api/: main.py
connectors/: eleven_connector.py  gemini_connector.py  openai_connector.py  sarvam_connectors.py
coordinators/: coordinator.py
utils/: timing.py
